--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(foreach,foreach)
+importFrom(magrittr,"%>%")
+importFrom(magrittr,`%>%`)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
