--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(perm_test_statistic)
 export(step_down_test)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
