--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(global_permutation_test)
 export(pairwise_permutation_tests)
 export(perm_test_statistic)
 export(step_down_test)
+importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
