--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(foreach,"%do%")
+importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,`%>%`)
