added get_table function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export("%>%")
 export(encode_staffer_IDs)
 export(events_to_num)
+export(get_table)
 export(global_permutation_test)
 export(pairwise_permutation_tests)
 export(perm_test_statistic)
 export(step_down_test)
 export(uniquify_staffer_IDs)
+importFrom(data.table,fread)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
@@ -24,10 +26,12 @@ importFrom(dplyr,ungroup)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(haven,read_dta)
 importFrom(lazyeval,lazy_dots)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,`%>%`)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
+importFrom(readxl,read_excel)
 importFrom(rlang,hash)
