--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export("%>%")
 export(encode_staffer_ids)
 export(events_to_num)
+export(get_p_value)
 export(get_table)
 export(global_permutation_test)
 export(pairwise_permutation_tests)
 export(perm_test_statistic)
-export(step_down_test)
+export(permgp_fn)
+export(permute_groups)
 export(uniquify_staffer_ids)
 importFrom(data.table,fread)
 importFrom(doParallel,registerDoParallel)
@@ -39,3 +41,4 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(readxl,read_excel)
 importFrom(rlang,hash)
+importFrom(stats,p.adjust)
