changed to the doSNOW backend to get the progress bar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(permgp_fn)
 export(permute_groups)
 export(uniquify_staffer_ids)
 importFrom(data.table,fread)
-importFrom(doParallel,registerDoParallel)
+importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
 importFrom(dplyr,group_by)
