--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,14 @@ export(pairwise_permutation_tests)
 export(perm_test_statistic)
 export(permgp_fn)
 export(permute_groups)
+export(standard_table)
 export(uniquify_staffer_ids)
 importFrom(data.table,fread)
+importFrom(data.table,rbindlist)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
+importFrom(dplyr,case_when)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
@@ -39,6 +42,9 @@ importFrom(magrittr,`%>%`)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
+importFrom(plyr,rbind.fill)
+importFrom(purrr,map)
+importFrom(purrr,reduce)
 importFrom(readxl,read_excel)
 importFrom(rlang,hash)
 importFrom(stats,p.adjust)
