--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(data.table,rbindlist)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
