changed file name, added standard_table

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Encoding: UTF-8
 RoxygenNote: 7.2.3
 Collate: 
     'SepsisTools-package.R'
+    'standard_table.R'
     'encode_staffer_ids.R'
     'event_to_num.R'
     'permute_groups.R'
@@ -25,7 +26,7 @@ Collate:
     'get_table.R'
     'global_permutation_test.R'
     'magrittr.R'
-    'pairwise_permutation_test.R'
+    'pairwise_permutation_tests.R'
     'permgp_fn.R'
     'permutation_test_statistic.R'
     'uniquify_staffer_ids.R'
