added the data description file to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Encoding: UTF-8
 RoxygenNote: 7.2.3
 Collate: 
     'SepsisTools-package.R'
+    'data.R'
     'standard_table.R'
     'encode_staffer_ids.R'
     'event_to_num.R'
