--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,13 @@
 export("%>%")
 export(encode_staffer_ids)
 export(events_to_num)
-export(get_p_value)
 export(get_table)
 export(global_permutation_test)
 export(pairwise_permutation_tests)
 export(perm_test_statistic)
 export(permgp_fn)
 export(permute_groups)
+export(single_permutation)
 export(standard_table)
 export(uniquify_staffer_ids)
 importFrom(data.table,fread)
