--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,3 +50,4 @@ importFrom(purrr,reduce)
 importFrom(readxl,read_excel)
 importFrom(rlang,hash)
 importFrom(stats,p.adjust)
+importFrom(tools,file_ext)
